--- a/llm-server/demo/index.html
+++ b/llm-server/demo/index.html
@@ -3,20 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DNDAI LLM Server Demo</title>
+  <title>DNDAI LLM / RAG / TTS Demo</title>
   <style>
-    body { font-family: sans-serif; margin: 2em; }
-    #response { margin-top: 1em; padding: 1em; background: #f0f0f0; border-radius: 5px; }
+    body { font-family: sans-serif; margin: 2em; background: #181a1b; color: #eee; }
+    h1, h2 { color: #ffd700; }
+    .section { margin-bottom: 2em; padding: 1em; background: #23272a; border-radius: 8px; }
+    label { font-weight: bold; }
+    textarea, select, input[type=text] { width: 100%; margin-bottom: 1em; border-radius: 4px; border: 1px solid #444; background: #222; color: #eee; padding: 0.5em; }
+    button { background: #ffd700; color: #222; border: none; border-radius: 4px; padding: 0.5em 1em; font-weight: bold; cursor: pointer; margin-right: 0.5em; }
+    button:active { background: #e6c200; }
+    #llm-response, #tts-audio { margin-top: 1em; }
+    #voice-reset { float: right; }
+    #context { background: #222; border: 1px solid #444; padding: 1em; margin-top: 1em; border-radius: 6px; color: #ffd700; }
   </style>
 </head>
 <body>
-  <h1>DNDAI LLM Server Demo</h1>
-  <form id="llm-form">
-    <label for="prompt">Prompt:</label><br>
-    <textarea id="prompt" rows="4" cols="60"></textarea><br>
-    <button type="submit">Send to LLM</button>
-  </form>
-  <div id="response"></div>
-  <script src="demo.js"></script>
+  <h1>DNDAI LLM / RAG / TTS Demo</h1>
+
+  <div class="section">
+    <label for="mode">Mode:</label>
+    <select id="mode">
+      <option value="llm">LLM</option>
+      <option value="rag">RAG</option>
+    </select>
+    <form id="llm-form">
+      <label for="llm-prompt">Prompt:</label>
+      <textarea id="llm-prompt" rows="3"></textarea>
+      <div id="rag-file-section" style="display:none;">
+        <label for="rag-file">RAG File (optional):</label>
+        <input id="rag-file" type="text" placeholder="example.md">
+      </div>
+      <label for="persona-select">Persona:</label>
+      <select id="persona-select">
+        <option value="Gruff Dwarf Bartender">Gruff Dwarf Bartender</option>
+        <option value="Mysterious Elf Sage">Mysterious Elf Sage</option>
+        <option value="Goblin Merchant">Goblin Merchant</option>
+        <option value="Neutral Narrator">Neutral Narrator</option>
+        <option value="custom">Custom...</option>
+      </select>
+      <input type="text" id="custom-persona" placeholder="Enter custom persona/system prompt" style="display:none; margin-top:0.5em;" />
+      <button type="submit">Send</button>
+    </form>
+    <div id="llm-response"></div>
+    <div id="context" style="display:none;"></div>
+  </div>
+
+  <div class="section">
+    <h2>TTS</h2>
+    <form id="tts-form">
+      <label for="tts-platform">TTS Platform:</label>
+      <select id="tts-platform">
+        <option value="gtts">gTTS (Google)</option>
+        <option value="elevenlabs">ElevenLabs</option>
+      </select>
+      <label for="voice-select">Voice:</label>
+      <select id="voice-select"></select>
+      <button type="button" id="voice-reset">Reset Voices</button>
+      <label for="tts-text">Text-to-Speech:</label>
+      <textarea id="tts-text" rows="2"></textarea>
+      <button type="submit">Generate Speech</button>
+    </form>
+    <audio id="tts-audio" controls style="display:none;"></audio>
+    <div id="tts-status"></div>
+  </div>
+
+  <script src="demo/demo.js"></script>
 </body>
 </html> 
