docs: update for RAG management dashboard, PDF viewer, and management API endpoints

--- a/llm-server/demo/index.html
+++ b/llm-server/demo/index.html
@@ -67,6 +67,19 @@
     <div id="tts-status"></div>
   </div>
 
+  <div class="section" id="rag-management-section">
+    <h2>RAG Management</h2>
+    <div>
+      <strong>Books (PDFs ready for ingestion):</strong>
+      <ul id="rag-books-list"></ul>
+    </div>
+    <div style="margin-top:1em;">
+      <strong>Ingested Chapters:</strong>
+      <ul id="rag-ingested-list"></ul>
+    </div>
+    <div id="rag-preview-modal" style="display:none; background:#111; color:#ffd700; padding:1em; border-radius:8px; margin-top:1em;"></div>
+  </div>
+
   <script src="demo/demo.js"></script>
 </body>
 </html> 
