feat: add screenplay-style demo page and robust tag/voice parsing in main demo

--- a/llm-server/demo/index.html
+++ b/llm-server/demo/index.html
@@ -9,7 +9,7 @@
     h1, h2 { color: #ffd700; }
     .section { margin-bottom: 2em; padding: 1em; background: #23272a; border-radius: 8px; }
     label { font-weight: bold; }
-    textarea, select, input[type=text] { width: 100%; margin-bottom: 1em; border-radius: 4px; border: 1px solid #444; background: #222; color: #eee; padding: 0.5em; }
+    textarea, select, input[type=text] { width: 100%; margin-bottom: 1em; border-radius: 4px; border: 1px solid #444; background: #222; color: #eee; padding: 0.5em; resize: vertical; }
     button { background: #ffd700; color: #222; border: none; border-radius: 4px; padding: 0.5em 1em; font-weight: bold; cursor: pointer; margin-right: 0.5em; }
     button:active { background: #e6c200; }
     #llm-response, #tts-audio { margin-top: 1em; }
@@ -28,6 +28,11 @@
     </select>
     <form id="llm-form">
       <label for="llm-prompt">Prompt:</label>
+      <div id="tag-toolbar" style="margin-bottom:0.5em;">
+        <button type="button" id="tag-narrative">Narrative</button>
+        <button type="button" id="tag-spoken">Spoken</button>
+        <button type="button" id="tag-internal">Internal/Whisper</button>
+      </div>
       <textarea id="llm-prompt" rows="3"></textarea>
       <div id="rag-file-section" style="display:none;">
         <label for="rag-file">RAG File (optional):</label>
@@ -42,9 +47,14 @@
         <option value="custom">Custom...</option>
       </select>
       <input type="text" id="custom-persona" placeholder="Enter custom persona/system prompt" style="display:none; margin-top:0.5em;" />
+      <div style="font-size:0.95em; color:#ffd700; margin-bottom:0.5em;">
+        <strong>Tip:</strong> For best TTS results, ask the AI to output in a structured format using tags like [NARRATIVE], [SPOKEN], and [INTERNAL].<br>
+        Example: <code>[NARRATIVE]The inn is warm.[/NARRATIVE] [SPOKEN]Welcome![/SPOKEN]</code>
+      </div>
       <button type="submit">Send</button>
     </form>
     <div id="llm-response"></div>
+    <button type="button" id="send-to-tts" style="margin-top:0.5em;">Send to TTS</button>
     <div id="context" style="display:none;"></div>
   </div>
 
@@ -59,6 +69,15 @@
       <label for="voice-select">Voice:</label>
       <select id="voice-select"></select>
       <button type="button" id="voice-reset">Reset Voices</button>
+      <div id="voice-assignment-panel" style="margin:1em 0; padding:0.5em; background:#222; border-radius:6px;">
+        <strong>Voice Assignment:</strong><br>
+        <label for="voice-narrative">Narrative:</label>
+        <select id="voice-narrative"></select>
+        <label for="voice-spoken">Spoken:</label>
+        <select id="voice-spoken"></select>
+        <label for="voice-internal">Internal/Whisper:</label>
+        <select id="voice-internal"></select>
+      </div>
       <label for="tts-text">Text-to-Speech:</label>
       <textarea id="tts-text" rows="2"></textarea>
       <button type="submit">Generate Speech</button>
