fix: resolve all flake8, black, and pre-commit issues (E501, E402, formatting)

--- a/llm-server/demo/index.html
+++ b/llm-server/demo/index.html
@@ -86,6 +86,11 @@
     <div id="tts-status"></div>
   </div>
 
+  <details style="margin-top:2em;">
+    <summary style="font-weight:bold; color:#ffd700;">Debug Log</summary>
+    <pre id="debug-log" style="background:#111; color:#ffd700; padding:1em; border-radius:8px; max-height:300px; overflow:auto;"></pre>
+  </details>
+
   <div class="section" id="rag-management-section">
     <h2>RAG Management</h2>
     <div>
@@ -101,4 +106,4 @@
 
   <script src="demo/demo.js"></script>
 </body>
-</html> 
+</html>
